[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"  # Optimize for size
debug = false
panic = "abort"  # Remove panic unwinding to reduce binary size
strip = true  # Strip symbols from binary

[profile.release.build-override]
opt-level = "z"  # Optimize for size
incremental = false
codegen-units = 1
